[package]
name = "ecc_auth"
version = "0.1.0"
authors = ["Alexander McCormick <alexandermccormick@protonmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ecc_auth"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
neon-serde = "0.1.1"
serde_derive = "1.0.84"
serde = "1.0.84"
chrono = "0.4.6"
serde_json = "1.0.35"
sodiumoxide = "0.2.0"
base64 = "0.10.0"